--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,6 +27,7 @@
     <title>React App</title>
   </head>
   <body >
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD812o98-5qpcViO3kCoUa8mpd4eyflbPo&v=3.exp&libraries=geometry,drawing,places"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
